# near-standards

./: Cargo.toml
core/: Cargo.toml  README.md  build.sh
core/dummy/: Cargo.toml
core/dummy/src/: lib.rs
core/ft/: Cargo.toml
core/ft/src/: lib.rs
core/near-account/: Cargo.toml
core/near-account/near-account-internal/: Cargo.toml
core/near-account/near-account-internal/src/: lib.rs
core/near-account/near-account-mac/: Cargo.toml
core/near-account/near-account-mac/src/: lib.rs
core/near-account/src/: account.rs  lib.rs  macros.rs
core/near-internal-balances-plugin/: Cargo.toml
core/near-internal-balances-plugin/near-internal-balances-plugin-internal/: Cargo.toml
core/near-internal-balances-plugin/near-internal-balances-plugin-internal/src/: core_impl.rs  ft.rs  lib.rs  macros.rs  mt.rs  nft.rs  token_id.rs
core/near-internal-balances-plugin/src/: core_impl.rs  ft.rs  lib.rs  macros.rs  mt.rs  nft.rs  token_id.rs  utils.rs
core/nft/src/: lib.rs
core/res/: defi.wasm  dummy.wasm  ft.wasm  fungible_token.wasm  multi_token.wasm  nft.wasm
core/sim/: main.rs  utils.rs  with_macros.rs
core/sim/testing/: internal_balance_ft.rs  internal_balance_mt.rs  internal_balance_nft.rs  storage.rs  utils.rs  with_macros.rs
dummy/: Cargo.toml
multi-token-standard-impl/examples/multi-token/mt/src/: lib.rs
near-account/: Cargo.toml
near-account/near-account-internal/: Cargo.toml
near-account/near-account-internal/src/: account.rs  lib.rs
near-account/near-account-mac/src/: lib.rs
near-internal-balances-plugin/near-internal-balances-plugin-internal/src/: core_impl.rs  lib.rs  macros.rs  token_id.rs
near-internal-balances-plugin/src/: lib.rs
res/: dummy.wasm
tests/sim/: main.rs  utils.rs  with_macros.rs
