[package]
name = "near-accounts-plugins-wrapper"
version = "0.0.1"
authors = ["Lev Stambler levstamb@gmail.com"]
edition = "2018"
license="MIT"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.2"
near-sdk = "4.0.0-pre.2"
near-contract-standards = "4.0.0-pre.2"

# remember to include a line for each contract
dummy = { path = "./dummy" }
ft = { path = "./ft" }
nft = { path = "./nft" }
multi-token = { path = "../multi-token-standard-impl/examples/multi-token/mt" }
multi-token-standard = { path = "../multi-token-standard-impl/multi_token" }
near-internal-balances-plugin = { path = "./near-internal-balances-plugin" }


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[[bin]]
name = "test"
path = "sim/main.rs"

[workspace]
members = ["near-account", "dummy", "near-internal-balances-plugin"]
