[package]
name = "dummy"
version = "1.0.0"
authors = ["Lev Stambler"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-account = { path = "../near-account" }
near-internal-balances-plugin = { path = "../near-internal-balances-plugin" }
near-contract-standards = "3.1.0"
