[package]
name = "near-account"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-account-internal = {path = "./near-account-internal"}
near-account-mac = {path = "./near-account-mac"}

[lib]
crate-type = ["cdylib", "rlib"]
