[package]
name = "dummy"
version = "1.0.0"
authors = ["Lev Stambler"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-account = { path = "../near-account" }
near-internal-balances-plugin = { path = "../near-internal-balances-plugin" }
near-sdk = "4.0.0-pre.2" 
near-contract-standards = "4.0.0-pre.2" 
