[package]
license="MIT"
description="A library for managing account data and storage on Near Smart Contracts"
repository="https://github.com/Lev-Stambler/near-standards"
name = "near-account"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.2" 
near-contract-standards = "4.0.0-pre.2" 

[lib]
crate-type = ["cdylib", "rlib"]
