[package]
name = "near-internal-balances-plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-internal-balances-plugin-internal = {path = "./near-internal-balances-plugin-internal"}

[lib]
crate-type = ["cdylib", "rlib"]
