[package]
name = "near-internal-balances-plugin"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-contract-standards = "4.0.0-pre.2"
near-sdk = "4.0.0-pre.2"
near-account = { path = "../near-account" }

[lib]
crate-type = ["cdylib", "rlib"]
