[package]
name = "near-internal-balances-plugin"
version = "0.1.0"
description = "A library for keeping track of the amount of FTs, MTs, and NFTs deposited into a contract"
repository="https://github.com/Lev-Stambler/near-standards"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-contract-standards = "4.0.0-pre.2"
near-sdk = "4.0.0-pre.2"
near-account = { path= "../near-account", version = "0.1.2" }

[patch.crates-io]
near-account = "0.1.2"


[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
