[package]
name = "near-internal-balances-plugin-internal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-contract-standards = "3.1.0"
near-sdk = "3.1.0"
near-account = { path = "../../near-account" }

[lib]
crate-type = ["cdylib", "rlib"]
